--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,7 @@
           <div class="site-info">
             <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
             <p class="site-description">{{ site.description }}</p>
+            <div align="center"> <img src="https://v2.jinrishici.com/one.svg" /> </div>
           </div>
 
           <nav>
