--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,5 +13,7 @@ layout: default
     Written on {{ page.date | date: "%B %e, %Y" }}
   </div>
 
+  <img src="https://www.loliapi.com/acg/" height="192" width="108" />
+
   {% include disqus.html %}
 </article>
